[gd_scene load_steps=9 format=2]

[ext_resource path="res://graphics/fonts/AmazDooMLeft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://graphics/ui_graphics/buttonStock1.png" type="Texture" id=2]
[ext_resource path="res://graphics/ui_graphics/background.png" type="Texture" id=3]
[ext_resource path="res://scripts/MainMenuManager.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 200
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 1 )

[node name="MainMenuCanvas" type="CanvasLayer"]

[node name="MainMenuManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -69.5926
margin_top = -235.717
margin_right = 1850.41
margin_bottom = 1684.28
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 275.659
margin_top = 39.2899
margin_right = 1062.66
margin_bottom = 285.29
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.658824, 0.027451, 0.027451, 1 )
text = "XENOSHOCK 3D"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
visible = false
margin_left = 460.778
margin_top = 94.1029
margin_right = 822.778
margin_bottom = 217.103
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]
position = Vector2( 4.15448, 489.096 )

[node name="SoloButton" type="Button" parent="Buttons"]
margin_left = 474.913
margin_top = -250.0
margin_right = 786.913
margin_bottom = -44.0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/SoloButton"]
margin_left = 30.9194
margin_top = 76.1093
margin_right = 280.919
margin_bottom = 138.109
custom_fonts/font = SubResource( 2 )
text = "SOLO PLAY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoopButton" type="Button" parent="Buttons"]
margin_left = 474.913
margin_top = -75.0
margin_right = 786.913
margin_bottom = 131.0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/CoopButton"]
margin_left = 30.9194
margin_top = 76.1093
margin_right = 280.919
margin_bottom = 138.109
custom_fonts/font = SubResource( 2 )
text = "2 Player PLAY"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="Button" parent="Buttons"]
margin_left = 474.913
margin_top = 100.0
margin_right = 786.913
margin_bottom = 306.0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/OptionsButton"]
margin_left = 30.9194
margin_top = 76.1093
margin_right = 280.919
margin_bottom = 138.109
custom_fonts/font = SubResource( 3 )
text = "OPTIONS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Buttons"]
margin_left = 474.913
margin_top = 250.0
margin_right = 867.913
margin_bottom = 456.0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/QuitButton"]
margin_left = 33.2979
margin_top = 73.7309
margin_right = 283.298
margin_bottom = 135.731
custom_fonts/font = SubResource( 4 )
text = "EXIT GAME"
align = 1
[connection signal="button_down" from="Buttons/SoloButton" to="MainMenuManager" method="solo_play"]
[connection signal="button_down" from="Buttons/CoopButton" to="MainMenuManager" method="coop_play"]
[connection signal="button_down" from="Buttons/OptionsButton" to="MainMenuManager" method="options"]
[connection signal="button_down" from="Buttons/QuitButton" to="MainMenuManager" method="exit_game"]
